--- a/Asm_Test/Asm_Test.vcxproj.filters
+++ b/Asm_Test/Asm_Test.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="Floats.cpp">
       <Filter>Файлы исходного кода</Filter>
     </ClCompile>
+    <ClCompile Include="Strlen.cpp">
+      <Filter>Файлы исходного кода</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
